--- a/i18n/fa.po
+++ b/i18n/fa.po
@@ -1,100 +1,117 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# 	* payment_mollie
-# 
-# Translators:
-# Hamed Mohammadi <hamed@dehongi.com>, 2023
-# odooers ir, 2023
-# Martin Trigaux, 2023
-# 
+# 	* ho_payment_zarinpal
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 17.0\n"
+"Project-Id-Version: Odoo Server 17.0+e-20240513\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-26 21:56+0000\n"
-"PO-Revision-Date: 2023-10-26 23:09+0000\n"
-"Last-Translator: Martin Trigaux, 2023\n"
-"Language-Team: Persian (https://app.transifex.com/odoo/teams/41243/fa/)\n"
+"POT-Creation-Date: 2024-11-17 18:19+0000\n"
+"PO-Revision-Date: 2024-11-17 18:19+0000\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: fa\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: \n"
 
-#. module: payment_mollie
-#: model_terms:ir.ui.view,arch_db:payment_mollie.payment_provider_form
-msgid "API Key"
-msgstr "کلید API"
-
-#. module: payment_mollie
-#. odoo-python
-#: code:addons/payment_mollie/models/payment_transaction.py:0
-#, python-format
-msgid "Canceled payment with status: %s"
-msgstr ""
-
-#. module: payment_mollie
-#: model:ir.model.fields,field_description:payment_mollie.field_payment_provider__code
+#. module: ho_payment_zarinpal
+#: model:ir.model.fields,field_description:ho_payment_zarinpal.field_payment_provider__code
 msgid "Code"
 msgstr "کد"
 
-#. module: payment_mollie
+#. module: ho_payment_zarinpal
 #. odoo-python
-#: code:addons/payment_mollie/models/payment_provider.py:0
+#: code:addons/ho_payment_zarinpal/models/payment_provider.py:0
+#: code:addons/ho_payment_zarinpal/models/payment_provider.py:0
 #, python-format
 msgid "Could not establish the connection to the API."
-msgstr ""
+msgstr "اتصال به API برقرار نشد."
 
-#. module: payment_mollie
-#: model:ir.model.fields.selection,name:payment_mollie.selection__payment_provider__code__mollie
-msgid "Mollie"
-msgstr ""
+#. module: ho_payment_zarinpal
+#: model:ir.model.fields,field_description:ho_payment_zarinpal.field_payment_provider__zarinpal_merchant_id
+msgid "Merchant ID"
+msgstr "شناسه پذیرنده"
 
-#. module: payment_mollie
-#: model:ir.model.fields,field_description:payment_mollie.field_payment_provider__mollie_api_key
-msgid "Mollie API Key"
-msgstr ""
-
-#. module: payment_mollie
+#. module: ho_payment_zarinpal
 #. odoo-python
-#: code:addons/payment_mollie/models/payment_transaction.py:0
+#: code:addons/ho_payment_zarinpal/models/payment_transaction.py:0
 #, python-format
 msgid "No transaction found matching reference %s."
-msgstr ""
+msgstr "هیچ تراکنشی مطابق با مرجع %s یافت نشد."
 
-#. module: payment_mollie
-#: model:ir.model,name:payment_mollie.model_payment_provider
+#. module: ho_payment_zarinpal
+#: model:ir.model,name:ho_payment_zarinpal.model_payment_provider
 msgid "Payment Provider"
 msgstr "سرویس دهنده پرداخت"
 
-#. module: payment_mollie
-#: model:ir.model,name:payment_mollie.model_payment_transaction
+#. module: ho_payment_zarinpal
+#: model:ir.model,name:ho_payment_zarinpal.model_payment_transaction
 msgid "Payment Transaction"
 msgstr "تراکنش پرداخت"
 
-#. module: payment_mollie
-#. odoo-python
-#: code:addons/payment_mollie/models/payment_transaction.py:0
-#, python-format
-msgid "Received data with invalid payment status: %s"
-msgstr ""
+#. module: ho_payment_zarinpal
+#: model:ir.model.fields,help:ho_payment_zarinpal.field_payment_transaction__zarinpal_authority
+msgid "Reference of the TX as stored in the acquirer database"
+msgstr "مرجع TX همانطور که در پایگاه داده اکتسابی ذخیره شده است"
 
-#. module: payment_mollie
-#: model:ir.model.fields,help:payment_mollie.field_payment_provider__mollie_api_key
-msgid ""
-"The Test or Live API Key depending on the configuration of the provider"
-msgstr ""
+#. module: ho_payment_zarinpal
+#: model:ir.model.fields,help:ho_payment_zarinpal.field_payment_provider__zarinpal_merchant_id
+msgid "The ID solely used to identify the merchant account with Zarinpal"
+msgstr "شناسه ای که صرفاً برای شناسایی حساب تجاری با زرین پال استفاده می شود"
 
-#. module: payment_mollie
+#. module: ho_payment_zarinpal
 #. odoo-python
-#: code:addons/payment_mollie/models/payment_provider.py:0
+#: code:addons/ho_payment_zarinpal/models/payment_provider.py:0
+#: code:addons/ho_payment_zarinpal/models/payment_provider.py:0
 #, python-format
 msgid ""
-"The communication with the API failed. Mollie gave us the following "
+"The communication with the API failed. SEP gave us the following "
 "information: %s"
 msgstr ""
+"ارتباط با API ناموفق بود. زرین پال موارد زیر را به ما داد"
+"اطلاعات: %s"
+#. module: ho_payment_zarinpal
+#. odoo-python
+#: code:addons/ho_payment_zarinpal/models/payment_transaction.py:0
+#: code:addons/ho_payment_zarinpal/models/payment_transaction.py:0
+#: code:addons/ho_payment_zarinpal/models/payment_transaction.py:0
+#, python-format
+msgid "The payment encountered an error with code %s"
+msgstr "پرداخت با کد %s با خطا مواجه شد"
 
-#. module: payment_mollie
-#: model:ir.model.fields,help:payment_mollie.field_payment_provider__code
+#. module: ho_payment_zarinpal
+#: model:ir.model.fields,help:ho_payment_zarinpal.field_payment_provider__code
 msgid "The technical code of this payment provider."
+msgstr "کد فنی این سرویس دهنده پرداخت"
+
+#. module: ho_payment_zarinpal
+#: model_terms:payment.provider,done_msg:ho_payment_zarinpal.payment_provider_zarinpal
+msgid "Your payment has been successfully processed."
+msgstr "پرداخت شما با موفقیت پردازش شد"
+
+#. module: ho_payment_zarinpal
+#: model:ir.model.fields.selection,name:ho_payment_zarinpal.selection__payment_provider__code__zarinpal
+#: model:payment.provider,name:ho_payment_zarinpal.payment_provider_zarinpal
+msgid "Zarinpal"
+msgstr "زرین پال"
+
+#. module: ho_payment_zarinpal
+#: model:ir.model.fields,field_description:ho_payment_zarinpal.field_payment_transaction__zarinpal_authority
+msgid "Zarinpal Authority"
+msgstr ""
+
+#. module: ho_payment_zarinpal
+#: model_terms:payment.provider,auth_msg:ho_payment_zarinpal.payment_provider_zarinpal
+msgid "این پرداخت مجاز است."
+msgstr ""
+
+#. module: ho_payment_zarinpal
+#: model_terms:payment.provider,pending_msg:ho_payment_zarinpal.payment_provider_zarinpal
+msgid "پرداخت شما با موفقیت انجام شد اما در انتظار تایید است."
+msgstr ""
+
+#. module: ho_payment_zarinpal
+#: model_terms:payment.provider,cancel_msg:ho_payment_zarinpal.payment_provider_zarinpal
+msgid "پرداخت شما لغو شده است."
 msgstr ""
